cmake_minimum_required(VERSION 3.3)
project(QBL_Pilot C)


include_directories(
        AFTER
        "Inc"
        "Drivers/STM32F4xx_HAL_Driver/Inc"
        "Drivers/STM32F4xx_HAL_Driver/Inc/Legacy"
        "Drivers/CMSIS/Include"
        "Drivers/CMSIS/Device/ST/STM32F4xx/Include"
        "Middlewares/Third_Party/FatFs/src/drivers"
        "Middlewares/Third_Party/FatFs/src"
        "Drivers/Device"
        "Middlewares"
)

add_definitions(-DUSE_HAL_DRIVER -DSTM32F407xx)

set(SOURCE_FILES
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f401xc.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f401xe.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f405xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f407xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f410cx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f410rx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f410tx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f411xe.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f415xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f417xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f427xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f429xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f437xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f439xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f469xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f479xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_shift_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_shift_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_shift_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_q7.c
    Drivers/CMSIS/DSP_Lib/Source/CommonTables/arm_common_tables.c
    Drivers/CMSIS/DSP_Lib/Source/CommonTables/arm_const_structs.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_conj_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_conj_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_conj_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_dot_prod_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_dot_prod_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_dot_prod_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_squared_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_squared_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_squared_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_real_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_real_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_real_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_reset_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_reset_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_reset_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_sin_cos_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_sin_cos_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_cos_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_cos_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_cos_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sin_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sin_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sin_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sqrt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sqrt_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_32x64_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_32x64_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df2T_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df2T_f64.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df2T_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df2T_init_f64.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_stereo_df2T_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_stereo_df2T_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_fast_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_opt_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_fast_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_opt_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_fast_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_opt_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_add_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_add_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_add_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_cmplx_mult_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_cmplx_mult_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_cmplx_mult_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_inverse_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_inverse_f64.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_scale_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_scale_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_scale_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_sub_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_sub_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_sub_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_trans_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_trans_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_trans_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_q7.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_q7.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_q7.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_q7.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_rms_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_rms_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_rms_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_std_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_std_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_std_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_var_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_var_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_var_q31.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_f32.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_q15.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_q31.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_q7.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_f32.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_q15.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_q31.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_q7.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_float_to_q15.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_float_to_q31.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_float_to_q7.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q15_to_float.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q15_to_q31.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q15_to_q7.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q31_to_float.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q31_to_q15.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q31_to_q7.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q7_to_float.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q7_to_q15.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q7_to_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_bitreversal.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix8_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_fast_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_fast_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_q31.c
    Drivers/CMSIS/Include/arm_common_tables.h
    Drivers/CMSIS/Include/arm_const_structs.h
    Drivers/CMSIS/Include/arm_math.h
    Drivers/CMSIS/Include/cmsis_armcc.h
    Drivers/CMSIS/Include/cmsis_armcc_V6.h
    Drivers/CMSIS/Include/cmsis_gcc.h
    Drivers/CMSIS/Include/core_cm0.h
    Drivers/CMSIS/Include/core_cm0plus.h
    Drivers/CMSIS/Include/core_cm3.h
    Drivers/CMSIS/Include/core_cm4.h
    Drivers/CMSIS/Include/core_cm7.h
    Drivers/CMSIS/Include/core_cmFunc.h
    Drivers/CMSIS/Include/core_cmInstr.h
    Drivers/CMSIS/Include/core_cmSimd.h
    Drivers/CMSIS/Include/core_sc000.h
    Drivers/CMSIS/Include/core_sc300.h
    Drivers/CMSIS/RTOS/Template/cmsis_os.h
    Drivers/Device/HMC5883.c
    Drivers/Device/HMC5883.h
    Drivers/Device/LED.c
    Drivers/Device/LED.h
    Drivers/Device/MPU6050.c
    Drivers/Device/MPU6050.h
    Drivers/Device/MS5611.c
    Drivers/Device/MS5611.h
    Drivers/Device/PWMInput.c
    Drivers/Device/PWMInput.h
    Drivers/Device/PWMOutput.c
    Drivers/Device/PWMOutput.h
    Drivers/Device/W25QXX.c
    Drivers/Device/W25QXX.h
    Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_can.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cec.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_conf_template.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cortex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_crc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cryp.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cryp_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dac.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dac_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dcmi.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dcmi_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_def.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma2d.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dsi.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_eth.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ramfunc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_fmpi2c.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_fmpi2c_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hash.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hash_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hcd.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2s.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2s_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_irda.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_iwdg.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_lptim.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_ltdc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_ltdc_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_nand.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_nor.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pccard.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_qspi.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rng.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rtc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rtc_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sai.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sai_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sd.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sdram.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_smartcard.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_spdifrx.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_spi.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sram.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_usart.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_wwdg.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_fmc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_fsmc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_sdmmc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_usb.h
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_can.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cec.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_crc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cryp.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cryp_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dac.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dac_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dcmi.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dcmi_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma2d.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dsi.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_eth.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ramfunc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_fmpi2c.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_fmpi2c_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hash.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hash_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hcd.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2s.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2s_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_irda.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_iwdg.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_lptim.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_ltdc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_ltdc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_msp_template.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_nand.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_nor.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pccard.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_qspi.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rng.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sai.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sai_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sd.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sdram.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_smartcard.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spdifrx.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spi.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sram.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_usart.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_wwdg.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_fmc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_fsmc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_sdmmc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_usb.c
    Inc/bsp_driver_sd.h
    Inc/dma.h
    Inc/fatfs.h
    Inc/ffconf.h
    Inc/gpio.h
    Inc/i2c.h
    Inc/mxconstants.h
    Inc/sdio.h
    Inc/spi.h
    Inc/stm32f4xx_hal_conf.h
    Inc/stm32f4xx_it.h
    Inc/tim.h
    Inc/usart.h
    MDK-ARM/RTE/RTE_Components.h
    Middlewares/mavlink/common/common.h
    Middlewares/mavlink/common/mavlink.h
    Middlewares/mavlink/common/mavlink_msg_actuator_control_target.h
    Middlewares/mavlink/common/mavlink_msg_adsb_vehicle.h
    Middlewares/mavlink/common/mavlink_msg_altitude.h
    Middlewares/mavlink/common/mavlink_msg_att_pos_mocap.h
    Middlewares/mavlink/common/mavlink_msg_attitude.h
    Middlewares/mavlink/common/mavlink_msg_attitude_quaternion.h
    Middlewares/mavlink/common/mavlink_msg_attitude_quaternion_cov.h
    Middlewares/mavlink/common/mavlink_msg_attitude_target.h
    Middlewares/mavlink/common/mavlink_msg_auth_key.h
    Middlewares/mavlink/common/mavlink_msg_autopilot_version.h
    Middlewares/mavlink/common/mavlink_msg_battery_status.h
    Middlewares/mavlink/common/mavlink_msg_camera_trigger.h
    Middlewares/mavlink/common/mavlink_msg_change_operator_control.h
    Middlewares/mavlink/common/mavlink_msg_change_operator_control_ack.h
    Middlewares/mavlink/common/mavlink_msg_command_ack.h
    Middlewares/mavlink/common/mavlink_msg_command_int.h
    Middlewares/mavlink/common/mavlink_msg_command_long.h
    Middlewares/mavlink/common/mavlink_msg_control_system_state.h
    Middlewares/mavlink/common/mavlink_msg_data_stream.h
    Middlewares/mavlink/common/mavlink_msg_data_transmission_handshake.h
    Middlewares/mavlink/common/mavlink_msg_debug.h
    Middlewares/mavlink/common/mavlink_msg_debug_vect.h
    Middlewares/mavlink/common/mavlink_msg_distance_sensor.h
    Middlewares/mavlink/common/mavlink_msg_encapsulated_data.h
    Middlewares/mavlink/common/mavlink_msg_extended_sys_state.h
    Middlewares/mavlink/common/mavlink_msg_file_transfer_protocol.h
    Middlewares/mavlink/common/mavlink_msg_global_position_int.h
    Middlewares/mavlink/common/mavlink_msg_global_position_int_cov.h
    Middlewares/mavlink/common/mavlink_msg_global_vision_position_estimate.h
    Middlewares/mavlink/common/mavlink_msg_gps2_raw.h
    Middlewares/mavlink/common/mavlink_msg_gps2_rtk.h
    Middlewares/mavlink/common/mavlink_msg_gps_global_origin.h
    Middlewares/mavlink/common/mavlink_msg_gps_inject_data.h
    Middlewares/mavlink/common/mavlink_msg_gps_raw_int.h
    Middlewares/mavlink/common/mavlink_msg_gps_rtk.h
    Middlewares/mavlink/common/mavlink_msg_gps_status.h
    Middlewares/mavlink/common/mavlink_msg_heartbeat.h
    Middlewares/mavlink/common/mavlink_msg_highres_imu.h
    Middlewares/mavlink/common/mavlink_msg_hil_controls.h
    Middlewares/mavlink/common/mavlink_msg_hil_gps.h
    Middlewares/mavlink/common/mavlink_msg_hil_optical_flow.h
    Middlewares/mavlink/common/mavlink_msg_hil_rc_inputs_raw.h
    Middlewares/mavlink/common/mavlink_msg_hil_sensor.h
    Middlewares/mavlink/common/mavlink_msg_hil_state.h
    Middlewares/mavlink/common/mavlink_msg_hil_state_quaternion.h
    Middlewares/mavlink/common/mavlink_msg_home_position.h
    Middlewares/mavlink/common/mavlink_msg_landing_target.h
    Middlewares/mavlink/common/mavlink_msg_local_position_ned.h
    Middlewares/mavlink/common/mavlink_msg_local_position_ned_cov.h
    Middlewares/mavlink/common/mavlink_msg_local_position_ned_system_global_offset.h
    Middlewares/mavlink/common/mavlink_msg_log_data.h
    Middlewares/mavlink/common/mavlink_msg_log_entry.h
    Middlewares/mavlink/common/mavlink_msg_log_erase.h
    Middlewares/mavlink/common/mavlink_msg_log_request_data.h
    Middlewares/mavlink/common/mavlink_msg_log_request_end.h
    Middlewares/mavlink/common/mavlink_msg_log_request_list.h
    Middlewares/mavlink/common/mavlink_msg_manual_control.h
    Middlewares/mavlink/common/mavlink_msg_manual_setpoint.h
    Middlewares/mavlink/common/mavlink_msg_memory_vect.h
    Middlewares/mavlink/common/mavlink_msg_message_interval.h
    Middlewares/mavlink/common/mavlink_msg_mission_ack.h
    Middlewares/mavlink/common/mavlink_msg_mission_clear_all.h
    Middlewares/mavlink/common/mavlink_msg_mission_count.h
    Middlewares/mavlink/common/mavlink_msg_mission_current.h
    Middlewares/mavlink/common/mavlink_msg_mission_item.h
    Middlewares/mavlink/common/mavlink_msg_mission_item_int.h
    Middlewares/mavlink/common/mavlink_msg_mission_item_reached.h
    Middlewares/mavlink/common/mavlink_msg_mission_request.h
    Middlewares/mavlink/common/mavlink_msg_mission_request_list.h
    Middlewares/mavlink/common/mavlink_msg_mission_request_partial_list.h
    Middlewares/mavlink/common/mavlink_msg_mission_set_current.h
    Middlewares/mavlink/common/mavlink_msg_mission_write_partial_list.h
    Middlewares/mavlink/common/mavlink_msg_named_value_float.h
    Middlewares/mavlink/common/mavlink_msg_named_value_int.h
    Middlewares/mavlink/common/mavlink_msg_nav_controller_output.h
    Middlewares/mavlink/common/mavlink_msg_optical_flow.h
    Middlewares/mavlink/common/mavlink_msg_optical_flow_rad.h
    Middlewares/mavlink/common/mavlink_msg_param_map_rc.h
    Middlewares/mavlink/common/mavlink_msg_param_request_list.h
    Middlewares/mavlink/common/mavlink_msg_param_request_read.h
    Middlewares/mavlink/common/mavlink_msg_param_set.h
    Middlewares/mavlink/common/mavlink_msg_param_value.h
    Middlewares/mavlink/common/mavlink_msg_ping.h
    Middlewares/mavlink/common/mavlink_msg_position_target_global_int.h
    Middlewares/mavlink/common/mavlink_msg_position_target_local_ned.h
    Middlewares/mavlink/common/mavlink_msg_power_status.h
    Middlewares/mavlink/common/mavlink_msg_radio_status.h
    Middlewares/mavlink/common/mavlink_msg_raw_imu.h
    Middlewares/mavlink/common/mavlink_msg_raw_pressure.h
    Middlewares/mavlink/common/mavlink_msg_rc_channels.h
    Middlewares/mavlink/common/mavlink_msg_rc_channels_override.h
    Middlewares/mavlink/common/mavlink_msg_rc_channels_raw.h
    Middlewares/mavlink/common/mavlink_msg_rc_channels_scaled.h
    Middlewares/mavlink/common/mavlink_msg_request_data_stream.h
    Middlewares/mavlink/common/mavlink_msg_resource_request.h
    Middlewares/mavlink/common/mavlink_msg_safety_allowed_area.h
    Middlewares/mavlink/common/mavlink_msg_safety_set_allowed_area.h
    Middlewares/mavlink/common/mavlink_msg_scaled_imu.h
    Middlewares/mavlink/common/mavlink_msg_scaled_imu2.h
    Middlewares/mavlink/common/mavlink_msg_scaled_imu3.h
    Middlewares/mavlink/common/mavlink_msg_scaled_pressure.h
    Middlewares/mavlink/common/mavlink_msg_scaled_pressure2.h
    Middlewares/mavlink/common/mavlink_msg_scaled_pressure3.h
    Middlewares/mavlink/common/mavlink_msg_serial_control.h
    Middlewares/mavlink/common/mavlink_msg_servo_output_raw.h
    Middlewares/mavlink/common/mavlink_msg_set_actuator_control_target.h
    Middlewares/mavlink/common/mavlink_msg_set_attitude_target.h
    Middlewares/mavlink/common/mavlink_msg_set_gps_global_origin.h
    Middlewares/mavlink/common/mavlink_msg_set_home_position.h
    Middlewares/mavlink/common/mavlink_msg_set_mode.h
    Middlewares/mavlink/common/mavlink_msg_set_position_target_global_int.h
    Middlewares/mavlink/common/mavlink_msg_set_position_target_local_ned.h
    Middlewares/mavlink/common/mavlink_msg_sim_state.h
    Middlewares/mavlink/common/mavlink_msg_statustext.h
    Middlewares/mavlink/common/mavlink_msg_sys_status.h
    Middlewares/mavlink/common/mavlink_msg_system_time.h
    Middlewares/mavlink/common/mavlink_msg_terrain_check.h
    Middlewares/mavlink/common/mavlink_msg_terrain_data.h
    Middlewares/mavlink/common/mavlink_msg_terrain_report.h
    Middlewares/mavlink/common/mavlink_msg_terrain_request.h
    Middlewares/mavlink/common/mavlink_msg_timesync.h
    Middlewares/mavlink/common/mavlink_msg_v2_extension.h
    Middlewares/mavlink/common/mavlink_msg_vfr_hud.h
    Middlewares/mavlink/common/mavlink_msg_vibration.h
    Middlewares/mavlink/common/mavlink_msg_vicon_position_estimate.h
    Middlewares/mavlink/common/mavlink_msg_vision_position_estimate.h
    Middlewares/mavlink/common/mavlink_msg_vision_speed_estimate.h
    Middlewares/mavlink/common/testsuite.h
    Middlewares/mavlink/common/version.h
    Middlewares/mavlink/checksum.h
    Middlewares/mavlink/mavlink_conversions.h
    Middlewares/mavlink/mavlink_helpers.h
    Middlewares/mavlink/mavlink_types.h
    Middlewares/mavlink/protocol.h
    Middlewares/Third_Party/FatFs/src/drivers/sd_diskio.c
    Middlewares/Third_Party/FatFs/src/drivers/sd_diskio.h
    Middlewares/Third_Party/FatFs/src/drivers/sdram_diskio.c
    Middlewares/Third_Party/FatFs/src/drivers/sdram_diskio.h
    Middlewares/Third_Party/FatFs/src/drivers/sram_diskio.c
    Middlewares/Third_Party/FatFs/src/drivers/sram_diskio.h
    Middlewares/Third_Party/FatFs/src/drivers/usbh_diskio.c
    Middlewares/Third_Party/FatFs/src/drivers/usbh_diskio.h
    Middlewares/Third_Party/FatFs/src/option/cc932.c
    Middlewares/Third_Party/FatFs/src/option/cc936.c
    Middlewares/Third_Party/FatFs/src/option/cc949.c
    Middlewares/Third_Party/FatFs/src/option/cc950.c
    Middlewares/Third_Party/FatFs/src/option/ccsbcs.c
    Middlewares/Third_Party/FatFs/src/option/syscall.c
    Middlewares/Third_Party/FatFs/src/option/unicode.c
    Middlewares/Third_Party/FatFs/src/diskio.c
    Middlewares/Third_Party/FatFs/src/diskio.h
    Middlewares/Third_Party/FatFs/src/ff.c
    Middlewares/Third_Party/FatFs/src/ff.h
    Middlewares/Third_Party/FatFs/src/ff_gen_drv.c
    Middlewares/Third_Party/FatFs/src/ff_gen_drv.h
    Middlewares/Third_Party/FatFs/src/ffconf_template.h
    Middlewares/Third_Party/FatFs/src/integer.h
    Middlewares/RingBuffer.c
    Middlewares/RingBuffer.h
    Middlewares/TimeMeter.c
    Middlewares/TimeMeter.h
    Middlewares/Utils.c
    Middlewares/Utils.h
    Src/bsp_driver_sd.c
    Src/dma.c
    Src/fatfs.c
    Src/gpio.c
    Src/i2c.c
    Src/main.c
    Src/sdio.c
    Src/spi.c
    Src/stm32f4xx_hal_msp.c
    Src/stm32f4xx_it.c
    Src/tim.c
    Src/usart.c)

add_executable(QBL_Pilot ${SOURCE_FILES})